--- a/.vercel/output/static/libro/aprendiendo-git/index.html
+++ b/.vercel/output/static/libro/aprendiendo-git/index.html
@@ -72,10 +72,10 @@
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a href="/" class="hover:underline opacity-70">⬅️Back to home</a> <img src="/aprendiendo-git.jpg" alt="Aprendiendo Git y GitHub" class="rounded w-72 h-auto" data-astro-transition-scope="astro-sjcdew3a-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70">Cargando Puntuación</span><link rel="preload" as="fetch" href="/_server-islands/BookStore?e=default&p=015D6CA66BA053255606509FT3ESFBgTyhBsK3VXMiq3EwU2Oj%2FLWatjn02hX4m35TdfphWgKobB9w%3D%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="85daa8f7-5e29-4435-80a6-a7227b56fe32">
-let script = document.querySelector('script[data-island-id="85daa8f7-5e29-4435-80a6-a7227b56fe32"]');
+	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a href="/" class="hover:underline opacity-70">⬅️Back to home</a> <img src="/aprendiendo-git.jpg" alt="Aprendiendo Git y GitHub" class="rounded w-72 h-auto" data-astro-transition-scope="astro-sjcdew3a-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70">Cargando Puntuación</span><link rel="preload" as="fetch" href="/_server-islands/BookStore?e=default&p=EA15587DF0E675D5657477F4N4Sh0IQGTCX51U9mlXdPP2L2MUYjwNIF8zb1R05dZcQSQziWLJR0XQ%3D%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="1fd94a4d-aa8a-4c62-ac78-84626a231d83">
+let script = document.querySelector('script[data-island-id="1fd94a4d-aa8a-4c62-ac78-84626a231d83"]');
 
-let response = await fetch('/_server-islands/BookStore?e=default&p=015D6CA66BA053255606509FT3ESFBgTyhBsK3VXMiq3EwU2Oj%2FLWatjn02hX4m35TdfphWgKobB9w%3D%3D&s=%7B%7D');
+let response = await fetch('/_server-islands/BookStore?e=default&p=EA15587DF0E675D5657477F4N4Sh0IQGTCX51U9mlXdPP2L2MUYjwNIF8zb1R05dZcQSQziWLJR0XQ%3D%3D&s=%7B%7D');
 
 if (script) {
 	if(
@@ -97,10 +97,10 @@ if (script) {
 	}
 	script.remove();
 }
-</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=AEA92B8C3B60F8301140B1A6knUc%2FzxjsqSGSwkfgqiEhU10ZZgCwWukJBF%2B3zUn0%2FQtFVSKd6d2oiFSa0%2F9PcSXNnTre84N1vxBYcsc2A2yDSYNXtW9gLVlHTwx7W6FkY9pDXmeo0%2FgChjQH6BJYhFxk0Q2oqfBHfNgiYWKpkokKtpYeL6QpaXORR6FE5SZHfYYzwx1PUbpWtsxF5lmnuQTTCDbzySZ&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="388c329b-ea1c-4565-88e2-6eddfb0f935f">
-let script = document.querySelector('script[data-island-id="388c329b-ea1c-4565-88e2-6eddfb0f935f"]');
+</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=212D5FA11E2CFCC893F2CA9AaJ%2F6N2mN8oh8mKeuA0RSJY1kktjKUc2d2P37g%2BkqBlplke%2BL3qIqIlPMSuyTTQoM7zSwlOjlH16sEtpE0yIJ14mB2sHTAWUaBnKK7IPsT5vdvjLRA8H1HgyzxtAczpPHM8jDyV35mVIFvxOaEKsBQZ9r6%2FvxMlAxHj1wqm4w5sGLxV6wlYqSGlHMPWBBsgPkzVdRQLNK&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="a8766146-1df8-4d42-8897-d46aaec3826c">
+let script = document.querySelector('script[data-island-id="a8766146-1df8-4d42-8897-d46aaec3826c"]');
 
-let response = await fetch('/_server-islands/BuyButton?e=default&p=AEA92B8C3B60F8301140B1A6knUc%2FzxjsqSGSwkfgqiEhU10ZZgCwWukJBF%2B3zUn0%2FQtFVSKd6d2oiFSa0%2F9PcSXNnTre84N1vxBYcsc2A2yDSYNXtW9gLVlHTwx7W6FkY9pDXmeo0%2FgChjQH6BJYhFxk0Q2oqfBHfNgiYWKpkokKtpYeL6QpaXORR6FE5SZHfYYzwx1PUbpWtsxF5lmnuQTTCDbzySZ&s=%7B%7D');
+let response = await fetch('/_server-islands/BuyButton?e=default&p=212D5FA11E2CFCC893F2CA9AaJ%2F6N2mN8oh8mKeuA0RSJY1kktjKUc2d2P37g%2BkqBlplke%2BL3qIqIlPMSuyTTQoM7zSwlOjlH16sEtpE0yIJ14mB2sHTAWUaBnKK7IPsT5vdvjLRA8H1HgyzxtAczpPHM8jDyV35mVIFvxOaEKsBQZ9r6%2FvxMlAxHj1wqm4w5sGLxV6wlYqSGlHMPWBBsgPkzVdRQLNK&s=%7B%7D');
 
 if (script) {
 	if(
