--- a/.vercel/output/static/libro/learning-typescript/index.html
+++ b/.vercel/output/static/libro/learning-typescript/index.html
@@ -72,10 +72,10 @@
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a href="/" class="hover:underline opacity-70">⬅️Back to home</a> <img src="/learning-typescript.jpg" alt="Learning TypeScript" class="rounded w-72 h-auto" data-astro-transition-scope="astro-sjcdew3a-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70">Cargando Puntuación</span><link rel="preload" as="fetch" href="/_server-islands/BookStore?e=default&p=4E7B1A5F8BE58EBE05FB46D0JjK25%2F6dfaxZ9Xc6zi0Lj92HYg7pbHnEwuncoYq%2Fli0lFP8N50S0Wh%2FafvM%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="26c719e7-c758-493f-a7ec-a33dceea3763">
-let script = document.querySelector('script[data-island-id="26c719e7-c758-493f-a7ec-a33dceea3763"]');
+	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a href="/" class="hover:underline opacity-70">⬅️Back to home</a> <img src="/learning-typescript.jpg" alt="Learning TypeScript" class="rounded w-72 h-auto" data-astro-transition-scope="astro-sjcdew3a-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70">Cargando Puntuación</span><link rel="preload" as="fetch" href="/_server-islands/BookStore?e=default&p=8096355098E23CFECAC79411jbh43%2BSK2RAm%2FsPfdD6H6BcBdQpKXdMlKfS%2FY9OjbSKAfPswC%2FPd9PKiqtE%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="4a0c9548-6b7d-47ca-bb64-796c15a52b9c">
+let script = document.querySelector('script[data-island-id="4a0c9548-6b7d-47ca-bb64-796c15a52b9c"]');
 
-let response = await fetch('/_server-islands/BookStore?e=default&p=4E7B1A5F8BE58EBE05FB46D0JjK25%2F6dfaxZ9Xc6zi0Lj92HYg7pbHnEwuncoYq%2Fli0lFP8N50S0Wh%2FafvM%3D&s=%7B%7D');
+let response = await fetch('/_server-islands/BookStore?e=default&p=8096355098E23CFECAC79411jbh43%2BSK2RAm%2FsPfdD6H6BcBdQpKXdMlKfS%2FY9OjbSKAfPswC%2FPd9PKiqtE%3D&s=%7B%7D');
 
 if (script) {
 	if(
@@ -97,10 +97,10 @@ if (script) {
 	}
 	script.remove();
 }
-</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=DC3A0568A3D0C3CD496C480Dx8OGcpaCS6olRAywqPHx7dMQfpOevguhqjVNoZmtLB%2FVFVsWSl%2FippJVCBENxEoSriO7HIMNQ%2BIQlS7Rded63GEvoBVgvbMUUN6Qwkd3BaBRmZ5keGv5hITaOctF2EwC4WCMfgve8V5kHZHY6M9l7UznC2ZmF0PH%2BTu4&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="5de8b40e-e39c-4511-8d27-926a5b200720">
-let script = document.querySelector('script[data-island-id="5de8b40e-e39c-4511-8d27-926a5b200720"]');
+</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=4EAD4E5368AACBC0856EC5FC9m%2BdbDUzhJ5hwq5uSm7AP78%2B62Ij40y6WR0PCmDNO1s0vm3sJXcdbeSgm%2FpxAmdD%2BWrIF%2B%2FnLfBDeaFIjATxjp%2BjrhOES0GmtGkMe4roOupyXlMS2484iyQXzUhGJMW5VZJqyCTeIS5ozPbMOJNI%2Bf95sH%2F47c4kJAeO&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="282aa676-c83e-43de-a0f1-20fe7332c7e9">
+let script = document.querySelector('script[data-island-id="282aa676-c83e-43de-a0f1-20fe7332c7e9"]');
 
-let response = await fetch('/_server-islands/BuyButton?e=default&p=DC3A0568A3D0C3CD496C480Dx8OGcpaCS6olRAywqPHx7dMQfpOevguhqjVNoZmtLB%2FVFVsWSl%2FippJVCBENxEoSriO7HIMNQ%2BIQlS7Rded63GEvoBVgvbMUUN6Qwkd3BaBRmZ5keGv5hITaOctF2EwC4WCMfgve8V5kHZHY6M9l7UznC2ZmF0PH%2BTu4&s=%7B%7D');
+let response = await fetch('/_server-islands/BuyButton?e=default&p=4EAD4E5368AACBC0856EC5FC9m%2BdbDUzhJ5hwq5uSm7AP78%2B62Ij40y6WR0PCmDNO1s0vm3sJXcdbeSgm%2FpxAmdD%2BWrIF%2B%2FnLfBDeaFIjATxjp%2BjrhOES0GmtGkMe4roOupyXlMS2484iyQXzUhGJMW5VZJqyCTeIS5ozPbMOJNI%2Bf95sH%2F47c4kJAeO&s=%7B%7D');
 
 if (script) {
 	if(
