--- a/.vercel/output/static/libro/refactoring/index.html
+++ b/.vercel/output/static/libro/refactoring/index.html
@@ -72,10 +72,10 @@
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a href="/" class="hover:underline opacity-70">⬅️Back to home</a> <img src="/refactoring.jpg" alt="Refactoring" class="rounded w-72 h-auto" data-astro-transition-scope="astro-sjcdew3a-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70">Cargando Puntuación</span><link rel="preload" as="fetch" href="/_server-islands/BookStore?e=default&p=0CE8DD9A6DB4320007ED12E5aPSv1XeCK4AQDc5jY35mF76N9W5g6dxhq0b4xCtcC5lsgKZ6&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="fea67baa-cd0b-466c-bae9-de8019783f61">
-let script = document.querySelector('script[data-island-id="fea67baa-cd0b-466c-bae9-de8019783f61"]');
+	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a href="/" class="hover:underline opacity-70">⬅️Back to home</a> <img src="/refactoring.jpg" alt="Refactoring" class="rounded w-72 h-auto" data-astro-transition-scope="astro-sjcdew3a-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70">Cargando Puntuación</span><link rel="preload" as="fetch" href="/_server-islands/BookStore?e=default&p=FC584CCA62F499A06001F72EeKEx9wiQ%2F8JaVRcawhmRETd4EBG8rWElOPsraoXno2UOOLxR&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="39634d31-411f-4d49-a12a-54f4cd6c0009">
+let script = document.querySelector('script[data-island-id="39634d31-411f-4d49-a12a-54f4cd6c0009"]');
 
-let response = await fetch('/_server-islands/BookStore?e=default&p=0CE8DD9A6DB4320007ED12E5aPSv1XeCK4AQDc5jY35mF76N9W5g6dxhq0b4xCtcC5lsgKZ6&s=%7B%7D');
+let response = await fetch('/_server-islands/BookStore?e=default&p=FC584CCA62F499A06001F72EeKEx9wiQ%2F8JaVRcawhmRETd4EBG8rWElOPsraoXno2UOOLxR&s=%7B%7D');
 
 if (script) {
 	if(
@@ -97,10 +97,10 @@ if (script) {
 	}
 	script.remove();
 }
-</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=E1097A9B0AAF38FB91785CFDlEaFAxzmDxbYtNyFPS6%2BE%2F5dOCH9bhWDRuS4Z9a85jYOY54%2BBHj%2FU1ZLxiPtuNRz8wtcPxnURayBgDFnyQK8iZzlucSjwP1vUIsDUeVc9CmkYz45Jpwdk%2B9zAxQCqKzTPASI5xigM4P7%2B8dlJLvaUEF3MBVOmRXt9vD1&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="946e2294-3491-443f-9c22-5f6813a2e5ef">
-let script = document.querySelector('script[data-island-id="946e2294-3491-443f-9c22-5f6813a2e5ef"]');
+</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=68B5C0FB719246D9ABDE4A7E0XDzMvhipus05dsh%2FsZCiJaPX4jBrNOEptIKzuU72YwDUugVdw5%2BmidEGzmLTd11I2G4JAt4APc6WDv2to9IWYo7pP3VLEhDvMDRTZ1cvpBn5pR%2FdBs77pi41gRrB60s%2BLjyvRoPVwmxbPQIT7O6rV3hEDJe39u5dfSH&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="d9971904-be2f-4338-8bd6-16c0333c9c7d">
+let script = document.querySelector('script[data-island-id="d9971904-be2f-4338-8bd6-16c0333c9c7d"]');
 
-let response = await fetch('/_server-islands/BuyButton?e=default&p=E1097A9B0AAF38FB91785CFDlEaFAxzmDxbYtNyFPS6%2BE%2F5dOCH9bhWDRuS4Z9a85jYOY54%2BBHj%2FU1ZLxiPtuNRz8wtcPxnURayBgDFnyQK8iZzlucSjwP1vUIsDUeVc9CmkYz45Jpwdk%2B9zAxQCqKzTPASI5xigM4P7%2B8dlJLvaUEF3MBVOmRXt9vD1&s=%7B%7D');
+let response = await fetch('/_server-islands/BuyButton?e=default&p=68B5C0FB719246D9ABDE4A7E0XDzMvhipus05dsh%2FsZCiJaPX4jBrNOEptIKzuU72YwDUugVdw5%2BmidEGzmLTd11I2G4JAt4APc6WDv2to9IWYo7pP3VLEhDvMDRTZ1cvpBn5pR%2FdBs77pi41gRrB60s%2BLjyvRoPVwmxbPQIT7O6rV3hEDJe39u5dfSH&s=%7B%7D');
 
 if (script) {
 	if(
