--- a/.vercel/output/static/index.html
+++ b/.vercel/output/static/index.html
@@ -72,19 +72,19 @@
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeIn; }</style><style>[data-astro-transition-scope="astro-7ki7bcvh-3"] { view-transition-name: img-learning-typescript; }@layer astro { ::view-transition-old(img-learning-typescript) { 
+	animation-name: astroFadeIn; }</style><style>[data-astro-transition-scope="astro-7ki7bcvh-3"] { view-transition-name: img-refactoring; }@layer astro { ::view-transition-old(img-refactoring) { 
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeOut; }::view-transition-new(img-learning-typescript) { 
+	animation-name: astroFadeOut; }::view-transition-new(img-refactoring) { 
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeIn; }[data-astro-transition=back]::view-transition-old(img-learning-typescript) { 
+	animation-name: astroFadeIn; }[data-astro-transition=back]::view-transition-old(img-refactoring) { 
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeOut; }[data-astro-transition=back]::view-transition-new(img-learning-typescript) { 
+	animation-name: astroFadeOut; }[data-astro-transition=back]::view-transition-new(img-refactoring) { 
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
@@ -108,19 +108,19 @@
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeIn; }</style><style>[data-astro-transition-scope="astro-5bsqwlbb-4"] { view-transition-name: title-learning-typescript; }@layer astro { ::view-transition-old(title-learning-typescript) { 
+	animation-name: astroFadeIn; }</style><style>[data-astro-transition-scope="astro-5bsqwlbb-4"] { view-transition-name: title-refactoring; }@layer astro { ::view-transition-old(title-refactoring) { 
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeOut; }::view-transition-new(title-learning-typescript) { 
+	animation-name: astroFadeOut; }::view-transition-new(title-refactoring) { 
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeIn; }[data-astro-transition=back]::view-transition-old(title-learning-typescript) { 
+	animation-name: astroFadeIn; }[data-astro-transition=back]::view-transition-old(title-refactoring) { 
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeOut; }[data-astro-transition=back]::view-transition-new(title-learning-typescript) { 
+	animation-name: astroFadeOut; }[data-astro-transition=back]::view-transition-new(title-refactoring) { 
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
@@ -144,19 +144,19 @@
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeIn; }</style><style>[data-astro-transition-scope="astro-7ki7bcvh-5"] { view-transition-name: img-programador-pragmatico; }@layer astro { ::view-transition-old(img-programador-pragmatico) { 
+	animation-name: astroFadeIn; }</style><style>[data-astro-transition-scope="astro-7ki7bcvh-5"] { view-transition-name: img-learning-typescript; }@layer astro { ::view-transition-old(img-learning-typescript) { 
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeOut; }::view-transition-new(img-programador-pragmatico) { 
+	animation-name: astroFadeOut; }::view-transition-new(img-learning-typescript) { 
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeIn; }[data-astro-transition=back]::view-transition-old(img-programador-pragmatico) { 
+	animation-name: astroFadeIn; }[data-astro-transition=back]::view-transition-old(img-learning-typescript) { 
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeOut; }[data-astro-transition=back]::view-transition-new(img-programador-pragmatico) { 
+	animation-name: astroFadeOut; }[data-astro-transition=back]::view-transition-new(img-learning-typescript) { 
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
@@ -180,19 +180,19 @@
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeIn; }</style><style>[data-astro-transition-scope="astro-5bsqwlbb-6"] { view-transition-name: title-programador-pragmatico; }@layer astro { ::view-transition-old(title-programador-pragmatico) { 
+	animation-name: astroFadeIn; }</style><style>[data-astro-transition-scope="astro-5bsqwlbb-6"] { view-transition-name: title-learning-typescript; }@layer astro { ::view-transition-old(title-learning-typescript) { 
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeOut; }::view-transition-new(title-programador-pragmatico) { 
+	animation-name: astroFadeOut; }::view-transition-new(title-learning-typescript) { 
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeIn; }[data-astro-transition=back]::view-transition-old(title-programador-pragmatico) { 
+	animation-name: astroFadeIn; }[data-astro-transition=back]::view-transition-old(title-learning-typescript) { 
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeOut; }[data-astro-transition=back]::view-transition-new(title-programador-pragmatico) { 
+	animation-name: astroFadeOut; }[data-astro-transition=back]::view-transition-new(title-learning-typescript) { 
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
@@ -216,19 +216,19 @@
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeIn; }</style><style>[data-astro-transition-scope="astro-7ki7bcvh-7"] { view-transition-name: img-refactoring; }@layer astro { ::view-transition-old(img-refactoring) { 
+	animation-name: astroFadeIn; }</style><style>[data-astro-transition-scope="astro-7ki7bcvh-7"] { view-transition-name: img-programador-pragmatico; }@layer astro { ::view-transition-old(img-programador-pragmatico) { 
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeOut; }::view-transition-new(img-refactoring) { 
+	animation-name: astroFadeOut; }::view-transition-new(img-programador-pragmatico) { 
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeIn; }[data-astro-transition=back]::view-transition-old(img-refactoring) { 
+	animation-name: astroFadeIn; }[data-astro-transition=back]::view-transition-old(img-programador-pragmatico) { 
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeOut; }[data-astro-transition=back]::view-transition-new(img-refactoring) { 
+	animation-name: astroFadeOut; }[data-astro-transition=back]::view-transition-new(img-programador-pragmatico) { 
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
@@ -252,19 +252,19 @@
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeIn; }</style><style>[data-astro-transition-scope="astro-5bsqwlbb-8"] { view-transition-name: title-refactoring; }@layer astro { ::view-transition-old(title-refactoring) { 
+	animation-name: astroFadeIn; }</style><style>[data-astro-transition-scope="astro-5bsqwlbb-8"] { view-transition-name: title-programador-pragmatico; }@layer astro { ::view-transition-old(title-programador-pragmatico) { 
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeOut; }::view-transition-new(title-refactoring) { 
+	animation-name: astroFadeOut; }::view-transition-new(title-programador-pragmatico) { 
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeIn; }[data-astro-transition=back]::view-transition-old(title-refactoring) { 
+	animation-name: astroFadeIn; }[data-astro-transition=back]::view-transition-old(title-programador-pragmatico) { 
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeOut; }[data-astro-transition=back]::view-transition-new(title-refactoring) { 
+	animation-name: astroFadeOut; }[data-astro-transition=back]::view-transition-new(title-programador-pragmatico) { 
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
@@ -289,4 +289,4 @@
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
 	animation-name: astroFadeIn; }</style></head> <body> <div>  <h1 class="text-center text-7xl font-extrabold mb-24">
-Dev 💻<span class="block">Books</span> </h1> <section aria-label="Libros recomendados para programadores"> <div class="px-4 mx-auto max-w-screen-xl"> <div class="gird gap-6 grid-cols-2"> <article class="flex"> <a href="/libro/aprendiendo-git" class="mb-2 xl:mb-0 transition hover:scale-110"> <img class="mr-5 w-48 rounded" src="aprendiendo-git.jpg" alt="Aprendiendo Git y GitHub" data-astro-transition-scope="astro-7ki7bcvh-1"> </a> <div class="flex flex-col justify-center"> <h2 class="mb-2 text-2xl font-bold leading-tight text-white" data-astro-transition-scope="astro-5bsqwlbb-2"> Aprendiendo Git y GitHub </h2> <p class="mb-4 text-gray-300 max-w-s">Aprende a usar Git y GitHub para gestionar tus proyectos de código.</p> <span class="text-xs">Lectura en 224 minutos</span> </div> </article><article class="flex"> <a href="/libro/learning-typescript" class="mb-2 xl:mb-0 transition hover:scale-110"> <img class="mr-5 w-48 rounded" src="learning-typescript.jpg" alt="Learning TypeScript" data-astro-transition-scope="astro-7ki7bcvh-3"> </a> <div class="flex flex-col justify-center"> <h2 class="mb-2 text-2xl font-bold leading-tight text-white" data-astro-transition-scope="astro-5bsqwlbb-4"> Learning TypeScript </h2> <p class="mb-4 text-gray-300 max-w-s">Domina TypeScript de 0 a experto</p> <span class="text-xs">Lectura en 301 minutos</span> </div> </article><article class="flex"> <a href="/libro/programador-pragmatico" class="mb-2 xl:mb-0 transition hover:scale-110"> <img class="mr-5 w-48 rounded" src="programador-pragmatico.jpg" alt="Programador Pragmatico" data-astro-transition-scope="astro-7ki7bcvh-5"> </a> <div class="flex flex-col justify-center"> <h2 class="mb-2 text-2xl font-bold leading-tight text-white" data-astro-transition-scope="astro-5bsqwlbb-6"> Programador Pragmatico </h2> <p class="mb-4 text-gray-300 max-w-s">Un libro clásico para mejorar en programación</p> <span class="text-xs">Lectura en 344 minutos</span> </div> </article><article class="flex"> <a href="/libro/refactoring" class="mb-2 xl:mb-0 transition hover:scale-110"> <img class="mr-5 w-48 rounded" src="refactoring.jpg" alt="Refactoring" data-astro-transition-scope="astro-7ki7bcvh-7"> </a> <div class="flex flex-col justify-center"> <h2 class="mb-2 text-2xl font-bold leading-tight text-white" data-astro-transition-scope="astro-5bsqwlbb-8"> Refactoring </h2> <p class="mb-4 text-gray-300 max-w-s">Buenas prácticas para refactorizar código</p> <span class="text-xs">Lectura en 355 minutos</span> </div> </article> </div> </div> </section>  </div> </body></html>
+Dev 💻<span class="block">Books</span> </h1> <section aria-label="Libros recomendados para programadores"> <div class="px-4 mx-auto max-w-screen-xl"> <div class="gird gap-6 grid-cols-2"> <article class="flex"> <a href="/libro/aprendiendo-git" class="mb-2 xl:mb-0 transition hover:scale-110"> <img class="mr-5 w-48 rounded" src="aprendiendo-git.jpg" alt="Aprendiendo Git y GitHub" data-astro-transition-scope="astro-7ki7bcvh-1"> </a> <div class="flex flex-col justify-center"> <h2 class="mb-2 text-2xl font-bold leading-tight text-white" data-astro-transition-scope="astro-5bsqwlbb-2"> Aprendiendo Git y GitHub </h2> <p class="mb-4 text-gray-300 max-w-s">Aprende a usar Git y GitHub para gestionar tus proyectos de código.</p> <span class="text-xs">Lectura en 224 minutos</span> </div> </article><article class="flex"> <a href="/libro/refactoring" class="mb-2 xl:mb-0 transition hover:scale-110"> <img class="mr-5 w-48 rounded" src="refactoring.jpg" alt="Refactoring" data-astro-transition-scope="astro-7ki7bcvh-3"> </a> <div class="flex flex-col justify-center"> <h2 class="mb-2 text-2xl font-bold leading-tight text-white" data-astro-transition-scope="astro-5bsqwlbb-4"> Refactoring </h2> <p class="mb-4 text-gray-300 max-w-s">Buenas prácticas para refactorizar código</p> <span class="text-xs">Lectura en 355 minutos</span> </div> </article><article class="flex"> <a href="/libro/learning-typescript" class="mb-2 xl:mb-0 transition hover:scale-110"> <img class="mr-5 w-48 rounded" src="learning-typescript.jpg" alt="Learning TypeScript" data-astro-transition-scope="astro-7ki7bcvh-5"> </a> <div class="flex flex-col justify-center"> <h2 class="mb-2 text-2xl font-bold leading-tight text-white" data-astro-transition-scope="astro-5bsqwlbb-6"> Learning TypeScript </h2> <p class="mb-4 text-gray-300 max-w-s">Domina TypeScript de 0 a experto</p> <span class="text-xs">Lectura en 301 minutos</span> </div> </article><article class="flex"> <a href="/libro/programador-pragmatico" class="mb-2 xl:mb-0 transition hover:scale-110"> <img class="mr-5 w-48 rounded" src="programador-pragmatico.jpg" alt="Programador Pragmatico" data-astro-transition-scope="astro-7ki7bcvh-7"> </a> <div class="flex flex-col justify-center"> <h2 class="mb-2 text-2xl font-bold leading-tight text-white" data-astro-transition-scope="astro-5bsqwlbb-8"> Programador Pragmatico </h2> <p class="mb-4 text-gray-300 max-w-s">Un libro clásico para mejorar en programación</p> <span class="text-xs">Lectura en 344 minutos</span> </div> </article> </div> </div> </section>  </div> </body></html>
