--- a/.vercel/output/static/libro/programador-pragmatico/index.html
+++ b/.vercel/output/static/libro/programador-pragmatico/index.html
@@ -72,10 +72,10 @@
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a href="/" class="hover:underline opacity-70">⬅️Back to home</a> <img src="/programador-pragmatico.jpg" alt="Programador Pragmatico" class="rounded w-72 h-auto" data-astro-transition-scope="astro-sjcdew3a-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70">Cargando Puntuación</span><link rel="preload" as="fetch" href="/_server-islands/BookStore?e=default&p=A37B7D822DFDB88D01B0A7D3u2WjMYHfvXxiqlZl8hE0jWoEj4O8vsdLGiaPu3GvLmC%2BCnokrmFiyC%2BmsAgZ7rk%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="32466da7-48aa-4bae-924b-a1fe4f5d730a">
-let script = document.querySelector('script[data-island-id="32466da7-48aa-4bae-924b-a1fe4f5d730a"]');
+	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a href="/" class="hover:underline opacity-70">⬅️Back to home</a> <img src="/programador-pragmatico.jpg" alt="Programador Pragmatico" class="rounded w-72 h-auto" data-astro-transition-scope="astro-sjcdew3a-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70">Cargando Puntuación</span><link rel="preload" as="fetch" href="/_server-islands/BookStore?e=default&p=5F43147D771C0E106B39F08DULB1g4RWOxjvWFRj2sZ3YG2vwi0XZGxrSeVZXUZS5J5h6oEfJNrcgnCDSZsyjlM%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="c6e6aee5-5abc-44f9-a141-852adff92dce">
+let script = document.querySelector('script[data-island-id="c6e6aee5-5abc-44f9-a141-852adff92dce"]');
 
-let response = await fetch('/_server-islands/BookStore?e=default&p=A37B7D822DFDB88D01B0A7D3u2WjMYHfvXxiqlZl8hE0jWoEj4O8vsdLGiaPu3GvLmC%2BCnokrmFiyC%2BmsAgZ7rk%3D&s=%7B%7D');
+let response = await fetch('/_server-islands/BookStore?e=default&p=5F43147D771C0E106B39F08DULB1g4RWOxjvWFRj2sZ3YG2vwi0XZGxrSeVZXUZS5J5h6oEfJNrcgnCDSZsyjlM%3D&s=%7B%7D');
 
 if (script) {
 	if(
@@ -97,10 +97,10 @@ if (script) {
 	}
 	script.remove();
 }
-</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=B6589472362FB0EED4FF49D7HRHtsjMgYJXH80fQ%2BLpGqCHWxvWQcOKHbbX%2FxC7sKSfrjKDUB7E7B%2Bd3qiaTUAEUfQ2VsB14Mbb8ChuvMnwAjXP2wuZ0z6v6IjHJkuAt0wTuyz7gzqfAkv2Vh6y6IzSdS3ptfmxrdAzW48JsW41Y7IsHkwgHxL4mGg%3D%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="fa498796-c094-4eea-b121-eea2a142bacd">
-let script = document.querySelector('script[data-island-id="fa498796-c094-4eea-b121-eea2a142bacd"]');
+</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=B323EDA04A77DCF5843A77F3hFsXmrfI3wqf1hSY8VVn1otIKE0dzRXGaeCyHQde0w3CnIgj%2F%2FUXqlvIJMq0kgi22SaS%2B5iA2UjPe218awnSIK76JdsBC4nx2x73BYvZAnNH8Jz1e9Ybmmb9bvWUeGoepvxYF31H4l6%2BBGMhrWqWs3DdOknsZFMHGg%3D%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="04b8c80e-a9ea-40d3-9204-d62693f182cb">
+let script = document.querySelector('script[data-island-id="04b8c80e-a9ea-40d3-9204-d62693f182cb"]');
 
-let response = await fetch('/_server-islands/BuyButton?e=default&p=B6589472362FB0EED4FF49D7HRHtsjMgYJXH80fQ%2BLpGqCHWxvWQcOKHbbX%2FxC7sKSfrjKDUB7E7B%2Bd3qiaTUAEUfQ2VsB14Mbb8ChuvMnwAjXP2wuZ0z6v6IjHJkuAt0wTuyz7gzqfAkv2Vh6y6IzSdS3ptfmxrdAzW48JsW41Y7IsHkwgHxL4mGg%3D%3D&s=%7B%7D');
+let response = await fetch('/_server-islands/BuyButton?e=default&p=B323EDA04A77DCF5843A77F3hFsXmrfI3wqf1hSY8VVn1otIKE0dzRXGaeCyHQde0w3CnIgj%2F%2FUXqlvIJMq0kgi22SaS%2B5iA2UjPe218awnSIK76JdsBC4nx2x73BYvZAnNH8Jz1e9Ybmmb9bvWUeGoepvxYF31H4l6%2BBGMhrWqWs3DdOknsZFMHGg%3D%3D&s=%7B%7D');
 
 if (script) {
 	if(
