--- a/.vercel/output/static/libro/learning-typescript/index.html
+++ b/.vercel/output/static/libro/learning-typescript/index.html
@@ -72,10 +72,10 @@
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a href="/" class="hover:underline opacity-70">⬅️Back to home</a> <img src="/learning-typescript.jpg" alt="Learning TypeScript" class="rounded w-72 h-auto" data-astro-transition-scope="astro-sjcdew3a-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70">Cargando Puntuación</span><link rel="preload" as="fetch" href="/_server-islands/BookStore?e=default&p=E5BD0F434A07BA6E9F8564FEiuf9%2F0r4%2BOegz%2FxPcXm9dgqn%2BBAbSWfzZbR3x8AGD0R4zo3AX705jr6fm9Q%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="710d062b-a03d-4649-9679-551d4d7c63d9">
-let script = document.querySelector('script[data-island-id="710d062b-a03d-4649-9679-551d4d7c63d9"]');
+	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a href="/" class="hover:underline opacity-70">⬅️Back to home</a> <img src="/learning-typescript.jpg" alt="Learning TypeScript" class="rounded w-72 h-auto" data-astro-transition-scope="astro-sjcdew3a-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70">Cargando Puntuación</span><link rel="preload" as="fetch" href="/_server-islands/BookStore?e=default&p=2EF8D67DF80B78B0D5DD04B0Zsbe7ja9PZVuAktGBF4%2FXbesgrq%2BcC%2BZ73rWfncSRLWlDEqYHgaVyc9QAc4%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="cca41e4f-6869-4372-bc24-2b3e4b53eb8a">
+let script = document.querySelector('script[data-island-id="cca41e4f-6869-4372-bc24-2b3e4b53eb8a"]');
 
-let response = await fetch('/_server-islands/BookStore?e=default&p=E5BD0F434A07BA6E9F8564FEiuf9%2F0r4%2BOegz%2FxPcXm9dgqn%2BBAbSWfzZbR3x8AGD0R4zo3AX705jr6fm9Q%3D&s=%7B%7D');
+let response = await fetch('/_server-islands/BookStore?e=default&p=2EF8D67DF80B78B0D5DD04B0Zsbe7ja9PZVuAktGBF4%2FXbesgrq%2BcC%2BZ73rWfncSRLWlDEqYHgaVyc9QAc4%3D&s=%7B%7D');
 
 if (script) {
 	if(
@@ -97,10 +97,10 @@ if (script) {
 	}
 	script.remove();
 }
-</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=4F71AC477F95E8A0BB5DA56FeYehWuWb2K%2F4uj2jeRkdegRkz3DRwmaAZEveWxUUTqQ7C7v%2BHju59GnUEG4keGn5aKrosGjPIFhkH9OfmK5i8jgXGn4jdGz%2BxfxQTFHE2gFsgHu6BwpXE3MBcBJWwLuV738lbUAbHjc26BgWG9XMu5cu4zH33SgTKvKA&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="352243ed-8d73-4cba-9747-652172d46957">
-let script = document.querySelector('script[data-island-id="352243ed-8d73-4cba-9747-652172d46957"]');
+</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=8A754C72FBF426D2B5F86EACBFaDMMRrBiEEijxjg3YblyT8yTa%2F8S83uaXofXCC3g8OPOIJip51qaTVWOjxhRM7M%2FULtJOeKsccXI86t4%2FfLoFAJc0R2uI%2Boii3EeACOlGRAHHkTVp6VJ%2F13Pgn%2Fr69naGgSmY22Le%2BOMCfXnjzG2IQYkNAyHkpcjrc&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="9b0550e0-8a32-4ebf-bb48-77cd2415b628">
+let script = document.querySelector('script[data-island-id="9b0550e0-8a32-4ebf-bb48-77cd2415b628"]');
 
-let response = await fetch('/_server-islands/BuyButton?e=default&p=4F71AC477F95E8A0BB5DA56FeYehWuWb2K%2F4uj2jeRkdegRkz3DRwmaAZEveWxUUTqQ7C7v%2BHju59GnUEG4keGn5aKrosGjPIFhkH9OfmK5i8jgXGn4jdGz%2BxfxQTFHE2gFsgHu6BwpXE3MBcBJWwLuV738lbUAbHjc26BgWG9XMu5cu4zH33SgTKvKA&s=%7B%7D');
+let response = await fetch('/_server-islands/BuyButton?e=default&p=8A754C72FBF426D2B5F86EACBFaDMMRrBiEEijxjg3YblyT8yTa%2F8S83uaXofXCC3g8OPOIJip51qaTVWOjxhRM7M%2FULtJOeKsccXI86t4%2FfLoFAJc0R2uI%2Boii3EeACOlGRAHHkTVp6VJ%2F13Pgn%2Fr69naGgSmY22Le%2BOMCfXnjzG2IQYkNAyHkpcjrc&s=%7B%7D');
 
 if (script) {
 	if(
