--- a/.vercel/output/static/libro/programador-pragmatico/index.html
+++ b/.vercel/output/static/libro/programador-pragmatico/index.html
@@ -72,10 +72,10 @@
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a href="/" class="hover:underline opacity-70">⬅️Back to home</a> <img src="/programador-pragmatico.jpg" alt="Programador Pragmatico" class="rounded w-72 h-auto" data-astro-transition-scope="astro-sjcdew3a-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70">Cargando Puntuación</span><link rel="preload" as="fetch" href="/_server-islands/BookStore?e=default&p=633F8E726187040CA4D3CCC2TqYY5BcllfMqRW2xpL011BmLpQ7VrYB1OfIkRU%2F4YJsqHRlB8x9SQa06gvA7iIU%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="17a586ac-8241-4b8c-a4cd-de71c283f842">
-let script = document.querySelector('script[data-island-id="17a586ac-8241-4b8c-a4cd-de71c283f842"]');
+	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a href="/" class="hover:underline opacity-70">⬅️Back to home</a> <img src="/programador-pragmatico.jpg" alt="Programador Pragmatico" class="rounded w-72 h-auto" data-astro-transition-scope="astro-sjcdew3a-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70">Cargando Puntuación</span><link rel="preload" as="fetch" href="/_server-islands/BookStore?e=default&p=4933A283B86BCABE02B17175DCIheybzqpaTHORldS4LiCnD3BvAWSuJTRLLATjk%2FcmDEg3kzDyJiuXLMjba3uk%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="580ac2a2-b802-4cb1-bed9-9e02aa7c3240">
+let script = document.querySelector('script[data-island-id="580ac2a2-b802-4cb1-bed9-9e02aa7c3240"]');
 
-let response = await fetch('/_server-islands/BookStore?e=default&p=633F8E726187040CA4D3CCC2TqYY5BcllfMqRW2xpL011BmLpQ7VrYB1OfIkRU%2F4YJsqHRlB8x9SQa06gvA7iIU%3D&s=%7B%7D');
+let response = await fetch('/_server-islands/BookStore?e=default&p=4933A283B86BCABE02B17175DCIheybzqpaTHORldS4LiCnD3BvAWSuJTRLLATjk%2FcmDEg3kzDyJiuXLMjba3uk%3D&s=%7B%7D');
 
 if (script) {
 	if(
@@ -97,10 +97,10 @@ if (script) {
 	}
 	script.remove();
 }
-</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=6AFF495C3050B53372AF5DA5sgQ%2BmgZyTWyM0K%2B%2BbPPb1udX0aqXtZYWi1%2F%2BUMgTSapl9TZApKQf7EXbQSJPGlCufKsFN7kAThHu0QvJpmTWzvdZFJ4cQ%2BaRTb6E2QziGVPUZ88WSg0EZARY7u8daB8C5PlqqDKwoNTBdkFSSmkfnHD%2BS3Nc%2BNsDYw%3D%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="08165c69-feef-4f7a-a901-913d276fddcc">
-let script = document.querySelector('script[data-island-id="08165c69-feef-4f7a-a901-913d276fddcc"]');
+</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=9051C23181BC65136CE03818DQER19dLlMo5nigRCVtWxINjq1o4YANi8Oi6RVaXDWi4BK7DST8oy%2FkE0fIi%2BuBmS%2FwwEJ1lpHyY0BjzvEp0ZGkc4HGKFD%2FrzpMag3huUTvfH%2BJz7bQk7yUFomdtIB5%2FzKt6e8bxlNGlh7LNHkMZDJSXyqH%2B%2BF0tQg%3D%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="2a10a691-6d11-4b2c-aff1-94dd0a2a73dd">
+let script = document.querySelector('script[data-island-id="2a10a691-6d11-4b2c-aff1-94dd0a2a73dd"]');
 
-let response = await fetch('/_server-islands/BuyButton?e=default&p=6AFF495C3050B53372AF5DA5sgQ%2BmgZyTWyM0K%2B%2BbPPb1udX0aqXtZYWi1%2F%2BUMgTSapl9TZApKQf7EXbQSJPGlCufKsFN7kAThHu0QvJpmTWzvdZFJ4cQ%2BaRTb6E2QziGVPUZ88WSg0EZARY7u8daB8C5PlqqDKwoNTBdkFSSmkfnHD%2BS3Nc%2BNsDYw%3D%3D&s=%7B%7D');
+let response = await fetch('/_server-islands/BuyButton?e=default&p=9051C23181BC65136CE03818DQER19dLlMo5nigRCVtWxINjq1o4YANi8Oi6RVaXDWi4BK7DST8oy%2FkE0fIi%2BuBmS%2FwwEJ1lpHyY0BjzvEp0ZGkc4HGKFD%2FrzpMag3huUTvfH%2BJz7bQk7yUFomdtIB5%2FzKt6e8bxlNGlh7LNHkMZDJSXyqH%2B%2BF0tQg%3D%3D&s=%7B%7D');
 
 if (script) {
 	if(
