--- a/.vercel/output/static/libro/refactoring/index.html
+++ b/.vercel/output/static/libro/refactoring/index.html
@@ -72,10 +72,10 @@
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a href="/" class="hover:underline opacity-70">⬅️Back to home</a> <img src="/refactoring.jpg" alt="Refactoring" class="rounded w-72 h-auto" data-astro-transition-scope="astro-sjcdew3a-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70">Cargando Puntuación</span><link rel="preload" as="fetch" href="/_server-islands/BookStore?e=default&p=41D113391EA21E29D02B1107uNuLMJzeynfZ%2Bx03TKqs9jdgcddRZzC41OnpAMcmajVLLK8J&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="18a910f0-ce33-46e4-a9c3-3b7a5c2203ee">
-let script = document.querySelector('script[data-island-id="18a910f0-ce33-46e4-a9c3-3b7a5c2203ee"]');
+	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a href="/" class="hover:underline opacity-70">⬅️Back to home</a> <img src="/refactoring.jpg" alt="Refactoring" class="rounded w-72 h-auto" data-astro-transition-scope="astro-sjcdew3a-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70">Cargando Puntuación</span><link rel="preload" as="fetch" href="/_server-islands/BookStore?e=default&p=73C0D5AB93D5282B25BC23C8M5WrWLlwFCJjV7nrOPLMDa3ROPpn1E05LRtlaPjitSBt%2FTRX&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="04c6f8e8-e91d-45a9-a4f0-708e1dd5316e">
+let script = document.querySelector('script[data-island-id="04c6f8e8-e91d-45a9-a4f0-708e1dd5316e"]');
 
-let response = await fetch('/_server-islands/BookStore?e=default&p=41D113391EA21E29D02B1107uNuLMJzeynfZ%2Bx03TKqs9jdgcddRZzC41OnpAMcmajVLLK8J&s=%7B%7D');
+let response = await fetch('/_server-islands/BookStore?e=default&p=73C0D5AB93D5282B25BC23C8M5WrWLlwFCJjV7nrOPLMDa3ROPpn1E05LRtlaPjitSBt%2FTRX&s=%7B%7D');
 
 if (script) {
 	if(
@@ -97,10 +97,10 @@ if (script) {
 	}
 	script.remove();
 }
-</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=86A461EFE142FA858305A193E69zR2qonxndnqIPDpuQuxch3zxQuwpwsBY%2BhyZGLmSYSgoAgRssYNqt10%2BwclV2cZjumkB4BpNpD2d0tgyLomLae6nIWbIjkQOcRJTuqSxbM114x32y2OPJ6XRzIzZth3N24G6kwa4WBsqT1y01YYpU0dMCd5IA6wJB&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="5aa5b7e5-f47f-498d-8d44-1bc2e06f2e95">
-let script = document.querySelector('script[data-island-id="5aa5b7e5-f47f-498d-8d44-1bc2e06f2e95"]');
+</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=F6D48DEC67CEF31D68406991wbhMe7w4M%2BCW0D4vXi4i2L9DlGkGkEOjBI9MLKCOcYIThO%2B%2FI1CP1Nz6pEC2UkGTJT9A3%2FoAgPjn9IftwkNPzVrdt%2FQoQBJUv6APHXZ0I42svhmuknPfmZ%2BtY%2FfdrlvwuWA5cFNhxR%2BDgPWeiBjE8c8OaySffUiy43KY&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="3afa838c-d54b-4285-8512-2c2e38a255fb">
+let script = document.querySelector('script[data-island-id="3afa838c-d54b-4285-8512-2c2e38a255fb"]');
 
-let response = await fetch('/_server-islands/BuyButton?e=default&p=86A461EFE142FA858305A193E69zR2qonxndnqIPDpuQuxch3zxQuwpwsBY%2BhyZGLmSYSgoAgRssYNqt10%2BwclV2cZjumkB4BpNpD2d0tgyLomLae6nIWbIjkQOcRJTuqSxbM114x32y2OPJ6XRzIzZth3N24G6kwa4WBsqT1y01YYpU0dMCd5IA6wJB&s=%7B%7D');
+let response = await fetch('/_server-islands/BuyButton?e=default&p=F6D48DEC67CEF31D68406991wbhMe7w4M%2BCW0D4vXi4i2L9DlGkGkEOjBI9MLKCOcYIThO%2B%2FI1CP1Nz6pEC2UkGTJT9A3%2FoAgPjn9IftwkNPzVrdt%2FQoQBJUv6APHXZ0I42svhmuknPfmZ%2BtY%2FfdrlvwuWA5cFNhxR%2BDgPWeiBjE8c8OaySffUiy43KY&s=%7B%7D');
 
 if (script) {
 	if(
