--- a/.vercel/output/static/libro/aprendiendo-git/index.html
+++ b/.vercel/output/static/libro/aprendiendo-git/index.html
@@ -72,10 +72,10 @@
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a href="/" class="hover:underline opacity-70">⬅️Back to home</a> <img src="/aprendiendo-git.jpg" alt="Aprendiendo Git y GitHub" class="rounded w-72 h-auto" data-astro-transition-scope="astro-sjcdew3a-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70">Cargando Puntuación</span><link rel="preload" as="fetch" href="/_server-islands/BookStore?e=default&p=D29180ADD53795896A276CBDTyd0v7LlhMzdNeE4Q2XO90YU8Abia8S8B%2FYmGeuXf31aJwUgVZtB4w%3D%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="97999498-ca83-4739-a66e-de5ec8a5d2c7">
-let script = document.querySelector('script[data-island-id="97999498-ca83-4739-a66e-de5ec8a5d2c7"]');
+	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a href="/" class="hover:underline opacity-70">⬅️Back to home</a> <img src="/aprendiendo-git.jpg" alt="Aprendiendo Git y GitHub" class="rounded w-72 h-auto" data-astro-transition-scope="astro-sjcdew3a-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70">Cargando Puntuación</span><link rel="preload" as="fetch" href="/_server-islands/BookStore?e=default&p=33BD61AD708FEC559982EBF9z%2FlqplB3WN%2BN3eeY5wGQybse6bKy9sL1p8VQcP05uAwhbxAmOvZiRA%3D%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="3af06eed-e5e4-4327-8e53-a8689ac26338">
+let script = document.querySelector('script[data-island-id="3af06eed-e5e4-4327-8e53-a8689ac26338"]');
 
-let response = await fetch('/_server-islands/BookStore?e=default&p=D29180ADD53795896A276CBDTyd0v7LlhMzdNeE4Q2XO90YU8Abia8S8B%2FYmGeuXf31aJwUgVZtB4w%3D%3D&s=%7B%7D');
+let response = await fetch('/_server-islands/BookStore?e=default&p=33BD61AD708FEC559982EBF9z%2FlqplB3WN%2BN3eeY5wGQybse6bKy9sL1p8VQcP05uAwhbxAmOvZiRA%3D%3D&s=%7B%7D');
 
 if (script) {
 	if(
@@ -97,10 +97,10 @@ if (script) {
 	}
 	script.remove();
 }
-</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=036AB41054DEAB26FD83B2CFdUVcx8sVReztfMTTiNOve4aOXwHXXrjbAAKRL9bpWffnOe7kbp75sM7ZcmzQ%2BgCPHJ54435FQrZKwMLiF2N5BGj2JcjCgviF%2BRIjco7CvfcFTQt1jM5NSh26uEhs8yQhY9F1MBnsix5x3reI%2FX9BqCbLj8Ip%2F%2FkZGJ63Wu3tHc5iK%2BF6%2FPf5xW%2FsAl%2Bi1iNsV6nUS7HA&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="5dc9890f-9114-4ba0-8a89-89773203cf79">
-let script = document.querySelector('script[data-island-id="5dc9890f-9114-4ba0-8a89-89773203cf79"]');
+</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=84702D606A7F473A1006AC12GZSCikppquWM0K2Xf6Oon4UGCfi1E3BhZuE80plvEJ0JSv7Xio69ElJwZbQBz69s8ChU8WJHxlrWk3rSpADfDXO7sy3ROeZWa5psCyemHIBZ6M1wEwa6f1%2Fjw72%2FhOcygpbZsCkuUdbGDjERUAsgj%2B9teUWfw6nwjWuiXwAcgBIqcFi2h1piqWPmmNfWOw0L8Iw0RwmK&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="75e2b987-1d45-4b7d-b1a3-49be1afeb0a1">
+let script = document.querySelector('script[data-island-id="75e2b987-1d45-4b7d-b1a3-49be1afeb0a1"]');
 
-let response = await fetch('/_server-islands/BuyButton?e=default&p=036AB41054DEAB26FD83B2CFdUVcx8sVReztfMTTiNOve4aOXwHXXrjbAAKRL9bpWffnOe7kbp75sM7ZcmzQ%2BgCPHJ54435FQrZKwMLiF2N5BGj2JcjCgviF%2BRIjco7CvfcFTQt1jM5NSh26uEhs8yQhY9F1MBnsix5x3reI%2FX9BqCbLj8Ip%2F%2FkZGJ63Wu3tHc5iK%2BF6%2FPf5xW%2FsAl%2Bi1iNsV6nUS7HA&s=%7B%7D');
+let response = await fetch('/_server-islands/BuyButton?e=default&p=84702D606A7F473A1006AC12GZSCikppquWM0K2Xf6Oon4UGCfi1E3BhZuE80plvEJ0JSv7Xio69ElJwZbQBz69s8ChU8WJHxlrWk3rSpADfDXO7sy3ROeZWa5psCyemHIBZ6M1wEwa6f1%2Fjw72%2FhOcygpbZsCkuUdbGDjERUAsgj%2B9teUWfw6nwjWuiXwAcgBIqcFi2h1piqWPmmNfWOw0L8Iw0RwmK&s=%7B%7D');
 
 if (script) {
 	if(
