--- a/.vercel/output/static/libro/aprendiendo-git/index.html
+++ b/.vercel/output/static/libro/aprendiendo-git/index.html
@@ -72,10 +72,10 @@
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a href="/" class="hover:underline opacity-70">⬅️Back to home</a> <img src="/aprendiendo-git.jpg" alt="Aprendiendo Git y GitHub" class="rounded w-72 h-auto" data-astro-transition-scope="astro-sjcdew3a-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70">Cargando Puntuación</span><link rel="preload" as="fetch" href="/_server-islands/BookStore?e=default&p=33BD61AD708FEC559982EBF9z%2FlqplB3WN%2BN3eeY5wGQybse6bKy9sL1p8VQcP05uAwhbxAmOvZiRA%3D%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="3af06eed-e5e4-4327-8e53-a8689ac26338">
-let script = document.querySelector('script[data-island-id="3af06eed-e5e4-4327-8e53-a8689ac26338"]');
+	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a href="/" class="hover:underline opacity-70">⬅️Back to home</a> <img src="/aprendiendo-git.jpg" alt="Aprendiendo Git y GitHub" class="rounded w-72 h-auto" data-astro-transition-scope="astro-sjcdew3a-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70">Cargando Puntuación</span><link rel="preload" as="fetch" href="/_server-islands/BookStore?e=default&p=C47248F0B652E544CCB575CC90GHhlXfvYqvyvIjCfd9VwatnyQyI3u2OiJER3HixuP3zCEzHm9XJQ%3D%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="11803734-4a6f-43f6-918b-2f223caed25c">
+let script = document.querySelector('script[data-island-id="11803734-4a6f-43f6-918b-2f223caed25c"]');
 
-let response = await fetch('/_server-islands/BookStore?e=default&p=33BD61AD708FEC559982EBF9z%2FlqplB3WN%2BN3eeY5wGQybse6bKy9sL1p8VQcP05uAwhbxAmOvZiRA%3D%3D&s=%7B%7D');
+let response = await fetch('/_server-islands/BookStore?e=default&p=C47248F0B652E544CCB575CC90GHhlXfvYqvyvIjCfd9VwatnyQyI3u2OiJER3HixuP3zCEzHm9XJQ%3D%3D&s=%7B%7D');
 
 if (script) {
 	if(
@@ -97,10 +97,10 @@ if (script) {
 	}
 	script.remove();
 }
-</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=84702D606A7F473A1006AC12GZSCikppquWM0K2Xf6Oon4UGCfi1E3BhZuE80plvEJ0JSv7Xio69ElJwZbQBz69s8ChU8WJHxlrWk3rSpADfDXO7sy3ROeZWa5psCyemHIBZ6M1wEwa6f1%2Fjw72%2FhOcygpbZsCkuUdbGDjERUAsgj%2B9teUWfw6nwjWuiXwAcgBIqcFi2h1piqWPmmNfWOw0L8Iw0RwmK&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="75e2b987-1d45-4b7d-b1a3-49be1afeb0a1">
-let script = document.querySelector('script[data-island-id="75e2b987-1d45-4b7d-b1a3-49be1afeb0a1"]');
+</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=793EF8A65FD30BA20785F936qXWx9e6eWs%2Fb8ll1FdWrLRE0F1%2BGiQS2nW0rTcKVZWPq8Xgtctg73UW8lgMOq27Wh%2FhD2uXEpN58%2FAqmev5mHGWPZrTMXQCWfzr0v3S5NTUJZO14fba6nZT2%2FUv%2BatTh2jGr7XXTc%2FTqA4pvlHOemMhIT92%2B3GC2PcGscUActfHxd4KCDdCj%2Fke%2Bvnwb48GIRWkBYV%2Fm&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="f8226934-90b5-4119-9711-abf0ed07bc65">
+let script = document.querySelector('script[data-island-id="f8226934-90b5-4119-9711-abf0ed07bc65"]');
 
-let response = await fetch('/_server-islands/BuyButton?e=default&p=84702D606A7F473A1006AC12GZSCikppquWM0K2Xf6Oon4UGCfi1E3BhZuE80plvEJ0JSv7Xio69ElJwZbQBz69s8ChU8WJHxlrWk3rSpADfDXO7sy3ROeZWa5psCyemHIBZ6M1wEwa6f1%2Fjw72%2FhOcygpbZsCkuUdbGDjERUAsgj%2B9teUWfw6nwjWuiXwAcgBIqcFi2h1piqWPmmNfWOw0L8Iw0RwmK&s=%7B%7D');
+let response = await fetch('/_server-islands/BuyButton?e=default&p=793EF8A65FD30BA20785F936qXWx9e6eWs%2Fb8ll1FdWrLRE0F1%2BGiQS2nW0rTcKVZWPq8Xgtctg73UW8lgMOq27Wh%2FhD2uXEpN58%2FAqmev5mHGWPZrTMXQCWfzr0v3S5NTUJZO14fba6nZT2%2FUv%2BatTh2jGr7XXTc%2FTqA4pvlHOemMhIT92%2B3GC2PcGscUActfHxd4KCDdCj%2Fke%2Bvnwb48GIRWkBYV%2Fm&s=%7B%7D');
 
 if (script) {
 	if(
