--- a/.vercel/output/static/libro/programador-pragmatico/index.html
+++ b/.vercel/output/static/libro/programador-pragmatico/index.html
@@ -72,10 +72,10 @@
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a href="/" class="hover:underline opacity-70">⬅️Back to home</a> <img src="/programador-pragmatico.jpg" alt="Programador Pragmatico" class="rounded w-72 h-auto" data-astro-transition-scope="astro-sjcdew3a-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70">Cargando Puntuación</span><link rel="preload" as="fetch" href="/_server-islands/BookStore?e=default&p=4933A283B86BCABE02B17175DCIheybzqpaTHORldS4LiCnD3BvAWSuJTRLLATjk%2FcmDEg3kzDyJiuXLMjba3uk%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="580ac2a2-b802-4cb1-bed9-9e02aa7c3240">
-let script = document.querySelector('script[data-island-id="580ac2a2-b802-4cb1-bed9-9e02aa7c3240"]');
+	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a href="/" class="hover:underline opacity-70">⬅️Back to home</a> <img src="/programador-pragmatico.jpg" alt="Programador Pragmatico" class="rounded w-72 h-auto" data-astro-transition-scope="astro-sjcdew3a-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70">Cargando Puntuación</span><link rel="preload" as="fetch" href="/_server-islands/BookStore?e=default&p=9ACCDAF134DF1581F318B16AIToDxaH37X%2BB%2BUWsaQqbizZ6Q3et62SpJZ1XcwYqAhif0itSziXHqyXrElo8gBY%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="c9aa4a58-d8f7-406e-bdf8-1a66395304e0">
+let script = document.querySelector('script[data-island-id="c9aa4a58-d8f7-406e-bdf8-1a66395304e0"]');
 
-let response = await fetch('/_server-islands/BookStore?e=default&p=4933A283B86BCABE02B17175DCIheybzqpaTHORldS4LiCnD3BvAWSuJTRLLATjk%2FcmDEg3kzDyJiuXLMjba3uk%3D&s=%7B%7D');
+let response = await fetch('/_server-islands/BookStore?e=default&p=9ACCDAF134DF1581F318B16AIToDxaH37X%2BB%2BUWsaQqbizZ6Q3et62SpJZ1XcwYqAhif0itSziXHqyXrElo8gBY%3D&s=%7B%7D');
 
 if (script) {
 	if(
@@ -97,10 +97,10 @@ if (script) {
 	}
 	script.remove();
 }
-</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=9051C23181BC65136CE03818DQER19dLlMo5nigRCVtWxINjq1o4YANi8Oi6RVaXDWi4BK7DST8oy%2FkE0fIi%2BuBmS%2FwwEJ1lpHyY0BjzvEp0ZGkc4HGKFD%2FrzpMag3huUTvfH%2BJz7bQk7yUFomdtIB5%2FzKt6e8bxlNGlh7LNHkMZDJSXyqH%2B%2BF0tQg%3D%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="2a10a691-6d11-4b2c-aff1-94dd0a2a73dd">
-let script = document.querySelector('script[data-island-id="2a10a691-6d11-4b2c-aff1-94dd0a2a73dd"]');
+</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=0B24147646F54AC2E186273FLVBwz8OlbGWiZG3qIzE%2BJj2CFLKUmiqFAdB8MNz%2B4UtvMWxO%2B4QBEx%2Bkab1pQY84Y9YQ%2Bq3dHtl70%2B1i000pIA917WjS9vmqqAGWZZeTYZ%2B8wcyXERF%2BFx1pY2j6JZuQVqG6Q11yD4Pxd7Y99CdZSaz8K7A67ib2DA%3D%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="84519167-2c29-481c-9a3c-2b9f9369b7b4">
+let script = document.querySelector('script[data-island-id="84519167-2c29-481c-9a3c-2b9f9369b7b4"]');
 
-let response = await fetch('/_server-islands/BuyButton?e=default&p=9051C23181BC65136CE03818DQER19dLlMo5nigRCVtWxINjq1o4YANi8Oi6RVaXDWi4BK7DST8oy%2FkE0fIi%2BuBmS%2FwwEJ1lpHyY0BjzvEp0ZGkc4HGKFD%2FrzpMag3huUTvfH%2BJz7bQk7yUFomdtIB5%2FzKt6e8bxlNGlh7LNHkMZDJSXyqH%2B%2BF0tQg%3D%3D&s=%7B%7D');
+let response = await fetch('/_server-islands/BuyButton?e=default&p=0B24147646F54AC2E186273FLVBwz8OlbGWiZG3qIzE%2BJj2CFLKUmiqFAdB8MNz%2B4UtvMWxO%2B4QBEx%2Bkab1pQY84Y9YQ%2Bq3dHtl70%2B1i000pIA917WjS9vmqqAGWZZeTYZ%2B8wcyXERF%2BFx1pY2j6JZuQVqG6Q11yD4Pxd7Y99CdZSaz8K7A67ib2DA%3D%3D&s=%7B%7D');
 
 if (script) {
 	if(
