--- a/.vercel/output/static/libro/learning-typescript/index.html
+++ b/.vercel/output/static/libro/learning-typescript/index.html
@@ -72,10 +72,10 @@
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a href="/" class="hover:underline opacity-70">⬅️Back to home</a> <img src="/learning-typescript.jpg" alt="Learning TypeScript" class="rounded w-72 h-auto" data-astro-transition-scope="astro-sjcdew3a-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70">Cargando Puntuación</span><link rel="preload" as="fetch" href="/_server-islands/BookStore?e=default&p=2EF8D67DF80B78B0D5DD04B0Zsbe7ja9PZVuAktGBF4%2FXbesgrq%2BcC%2BZ73rWfncSRLWlDEqYHgaVyc9QAc4%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="cca41e4f-6869-4372-bc24-2b3e4b53eb8a">
-let script = document.querySelector('script[data-island-id="cca41e4f-6869-4372-bc24-2b3e4b53eb8a"]');
+	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a href="/" class="hover:underline opacity-70">⬅️Back to home</a> <img src="/learning-typescript.jpg" alt="Learning TypeScript" class="rounded w-72 h-auto" data-astro-transition-scope="astro-sjcdew3a-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70">Cargando Puntuación</span><link rel="preload" as="fetch" href="/_server-islands/BookStore?e=default&p=7CA089AB3BE1E6AC58006D18PEX5JKu4XXstARz4QhpJH%2BHewlrHKmsAKOv9mAC8n1DbkFr1jxD7U5nGqeQ%3D&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="f72f5a1e-d892-481e-8519-1c2073383c78">
+let script = document.querySelector('script[data-island-id="f72f5a1e-d892-481e-8519-1c2073383c78"]');
 
-let response = await fetch('/_server-islands/BookStore?e=default&p=2EF8D67DF80B78B0D5DD04B0Zsbe7ja9PZVuAktGBF4%2FXbesgrq%2BcC%2BZ73rWfncSRLWlDEqYHgaVyc9QAc4%3D&s=%7B%7D');
+let response = await fetch('/_server-islands/BookStore?e=default&p=7CA089AB3BE1E6AC58006D18PEX5JKu4XXstARz4QhpJH%2BHewlrHKmsAKOv9mAC8n1DbkFr1jxD7U5nGqeQ%3D&s=%7B%7D');
 
 if (script) {
 	if(
@@ -97,10 +97,10 @@ if (script) {
 	}
 	script.remove();
 }
-</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=8A754C72FBF426D2B5F86EACBFaDMMRrBiEEijxjg3YblyT8yTa%2F8S83uaXofXCC3g8OPOIJip51qaTVWOjxhRM7M%2FULtJOeKsccXI86t4%2FfLoFAJc0R2uI%2Boii3EeACOlGRAHHkTVp6VJ%2F13Pgn%2Fr69naGgSmY22Le%2BOMCfXnjzG2IQYkNAyHkpcjrc&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="9b0550e0-8a32-4ebf-bb48-77cd2415b628">
-let script = document.querySelector('script[data-island-id="9b0550e0-8a32-4ebf-bb48-77cd2415b628"]');
+</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=8196F5CE6096785DF0B80123VM0yGGMjzl4Hpp0UvCpOW0z0oxb1VqI9IIzjWRtuUo%2FoZXxLM5TNaQXq3e7Z81RhzrX4YGgT8QBwv3ivDrJPbog%2B1icMDH2%2FZwf%2FJsSrLGm7vGlm5%2B%2F%2FCWX822EpiuYBYS15RWo3JWYsFU81gOVQAfkLGl%2FYxPlbDSOU&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="d49b5b29-03cd-4e1a-a8e1-7442e4a091ad">
+let script = document.querySelector('script[data-island-id="d49b5b29-03cd-4e1a-a8e1-7442e4a091ad"]');
 
-let response = await fetch('/_server-islands/BuyButton?e=default&p=8A754C72FBF426D2B5F86EACBFaDMMRrBiEEijxjg3YblyT8yTa%2F8S83uaXofXCC3g8OPOIJip51qaTVWOjxhRM7M%2FULtJOeKsccXI86t4%2FfLoFAJc0R2uI%2Boii3EeACOlGRAHHkTVp6VJ%2F13Pgn%2Fr69naGgSmY22Le%2BOMCfXnjzG2IQYkNAyHkpcjrc&s=%7B%7D');
+let response = await fetch('/_server-islands/BuyButton?e=default&p=8196F5CE6096785DF0B80123VM0yGGMjzl4Hpp0UvCpOW0z0oxb1VqI9IIzjWRtuUo%2FoZXxLM5TNaQXq3e7Z81RhzrX4YGgT8QBwv3ivDrJPbog%2B1icMDH2%2FZwf%2FJsSrLGm7vGlm5%2B%2F%2FCWX822EpiuYBYS15RWo3JWYsFU81gOVQAfkLGl%2FYxPlbDSOU&s=%7B%7D');
 
 if (script) {
 	if(
