--- a/.vercel/output/static/libro/refactoring/index.html
+++ b/.vercel/output/static/libro/refactoring/index.html
@@ -72,10 +72,10 @@
 	animation-duration: 180ms;
 	animation-timing-function: cubic-bezier(0.76, 0, 0.24, 1);
 	animation-fill-mode: both;
-	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a href="/" class="hover:underline opacity-70">⬅️Back to home</a> <img src="/refactoring.jpg" alt="Refactoring" class="rounded w-72 h-auto" data-astro-transition-scope="astro-sjcdew3a-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70">Cargando Puntuación</span><link rel="preload" as="fetch" href="/_server-islands/BookStore?e=default&p=73C0D5AB93D5282B25BC23C8M5WrWLlwFCJjV7nrOPLMDa3ROPpn1E05LRtlaPjitSBt%2FTRX&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="04c6f8e8-e91d-45a9-a4f0-708e1dd5316e">
-let script = document.querySelector('script[data-island-id="04c6f8e8-e91d-45a9-a4f0-708e1dd5316e"]');
+	animation-name: astroFadeIn; }</style></head> <body> <div>  <div class="flex gap-12"> <aside class="flex flex-col items-center gap-4"> <a href="/" class="hover:underline opacity-70">⬅️Back to home</a> <img src="/refactoring.jpg" alt="Refactoring" class="rounded w-72 h-auto" data-astro-transition-scope="astro-sjcdew3a-1"> <!--[if astro]>server-island-start<![endif]--><span class="text-xs opacity-70">Cargando Puntuación</span><link rel="preload" as="fetch" href="/_server-islands/BookStore?e=default&p=CAC1394EF5784309FAC4153AZYu7fKQuPiWqdmYrZwn2BsUPBGowq3pPGu7T3eVH3uLVUBvB&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="5f12629a-93ad-4fd0-b575-26117b00c691">
+let script = document.querySelector('script[data-island-id="5f12629a-93ad-4fd0-b575-26117b00c691"]');
 
-let response = await fetch('/_server-islands/BookStore?e=default&p=73C0D5AB93D5282B25BC23C8M5WrWLlwFCJjV7nrOPLMDa3ROPpn1E05LRtlaPjitSBt%2FTRX&s=%7B%7D');
+let response = await fetch('/_server-islands/BookStore?e=default&p=CAC1394EF5784309FAC4153AZYu7fKQuPiWqdmYrZwn2BsUPBGowq3pPGu7T3eVH3uLVUBvB&s=%7B%7D');
 
 if (script) {
 	if(
@@ -97,10 +97,10 @@ if (script) {
 	}
 	script.remove();
 }
-</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=F6D48DEC67CEF31D68406991wbhMe7w4M%2BCW0D4vXi4i2L9DlGkGkEOjBI9MLKCOcYIThO%2B%2FI1CP1Nz6pEC2UkGTJT9A3%2FoAgPjn9IftwkNPzVrdt%2FQoQBJUv6APHXZ0I42svhmuknPfmZ%2BtY%2FfdrlvwuWA5cFNhxR%2BDgPWeiBjE8c8OaySffUiy43KY&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="3afa838c-d54b-4285-8512-2c2e38a255fb">
-let script = document.querySelector('script[data-island-id="3afa838c-d54b-4285-8512-2c2e38a255fb"]');
+</script> <!--[if astro]>server-island-start<![endif]--><link rel="preload" as="fetch" href="/_server-islands/BuyButton?e=default&p=C24FD88FFEEE076492671AC4MSZyAlfkIGQfQkAqWw3t1rlUzzbP1xRfonQmMZ%2BKBNtYnPJKQmmSF%2B%2B1lHLTbuR274wu1Zuf%2BzYIVNHBnBAHN1qsgZ5HeWjRPlL471RLAdQ0MaBFLr4IiKT47HUSzYWOv12MNwKWzOJQmNLxesICNAOUk92VqQgo73xF&s=%7B%7D" crossorigin="anonymous"><script async type="module" data-island-id="6d627b47-d465-4619-9dec-318b94d6b693">
+let script = document.querySelector('script[data-island-id="6d627b47-d465-4619-9dec-318b94d6b693"]');
 
-let response = await fetch('/_server-islands/BuyButton?e=default&p=F6D48DEC67CEF31D68406991wbhMe7w4M%2BCW0D4vXi4i2L9DlGkGkEOjBI9MLKCOcYIThO%2B%2FI1CP1Nz6pEC2UkGTJT9A3%2FoAgPjn9IftwkNPzVrdt%2FQoQBJUv6APHXZ0I42svhmuknPfmZ%2BtY%2FfdrlvwuWA5cFNhxR%2BDgPWeiBjE8c8OaySffUiy43KY&s=%7B%7D');
+let response = await fetch('/_server-islands/BuyButton?e=default&p=C24FD88FFEEE076492671AC4MSZyAlfkIGQfQkAqWw3t1rlUzzbP1xRfonQmMZ%2BKBNtYnPJKQmmSF%2B%2B1lHLTbuR274wu1Zuf%2BzYIVNHBnBAHN1qsgZ5HeWjRPlL471RLAdQ0MaBFLr4IiKT47HUSzYWOv12MNwKWzOJQmNLxesICNAOUk92VqQgo73xF&s=%7B%7D');
 
 if (script) {
 	if(
